--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
             <version>2.6.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.0-alpha1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
